# ios-backup-reader

./: .gitignore  README.md  pyproject.toml  validate_export.py
ios_backup_reader/: backup.py  cli.py
ios_backup_reader/exporters/: csv_export.py  json_export.py
ios_backup_reader/parsers/: calls.py  contacts.py  messages.py  notes.py
