[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-backup-reader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
encrypted = [
    "iphone-backup-decrypt>=0.9",
]

[project.scripts]
ios-backup-reader = "ios_backup_reader.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["ios_backup_reader"]
